styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');


:root{
    --primary-color: #FCD34D;
    --secondary-color:#4338CA;
}

body{
    margin: 0px;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}

textarea {
    width: 60%;
    display:block;
    height: 10vh;
    border-radius: 1rem;
    padding: 1rem;
    margin: 2rem auto;
    border: 2px solid black;    
    font-size: 20px;
    
}

textarea:focus{
    outline: none;
}

 #output{
    border: 2px solid black;
    height: 10vh;
    width: 60%;
    height: 10vh;
    padding: 1rem;
    margin: 2rem auto;
    border-radius: 1rem;
    font-size: 20px;
}



.navigation{
    background-color: var(--primary-color);
    color:var(--secondary-color);
    padding: 1rem;
    border-bottom-left-radius:1rem;
    border-bottom-right-radius:1rem;
    text-align: center;  
}

.navigation small{
    font-size: 1rem;
}

.btn{
    text-align: center;
}

.output-text {

    margin-top: 0.5rem;
}

#btn-translate{
    background-color: var(--primary-color);
    border: 1px solid black;
    border-radius: 0.5rem;
    font-size: 20px;
    margin: 1rem;
    padding: 0.5rem 0.5rem;
}

.footer{
    background-color: var(--primary-color);
    color:var(--secondary-color);
    padding: 1rem;
    border-top-right-radius:1rem;
    border-top-left-radius:1rem;
    height: 17vh;
    text-align: center;
}

